# TE-splitter

./: .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  LICENSE.txt  README.md  env_osx64.yml  environment.yml  exterminate.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py
.github/workflows/: publish.yml  pytest.yml  ruff.yml
api-docs/tSplit_API/: index.html
cli-docs/cli-tutorial/: index.html
docs/: index.md
docs/api-docs/: tSplit_API.md
docs/cli-docs/: cli-tutorial.md
exterminate/: __init__.py  command_line.py  runBlastn.py
scripts/: README.md  tsd-tir-interval-finder.py
scripts/data/: mintest.fa
search/: search_index.json
src/tesplitter/: __init__.py  cmd_LTR.py  cmd_TIR.py
src/tsplit/: __init__.py  app_tsplit.py  cmd_LTR.py  cmd_TIR.py  logs.py  parseAlign.py  runBlastn.py  utils.py  wrapping.py
tests/: test_parseAlign.py
tests/data/: LTR_retrotransposon.fa  TIR_element.fa
